--- a/week2.ipynb
+++ b/week2.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Done"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -69,15 +77,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "'[' was never closed (1970149257.py, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[69], line 10\u001b[1;36m\u001b[0m\n\u001b[1;33m    smallestPriceRow = rows[0\u001b[0m\n\u001b[1;37m                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m '[' was never closed\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120.0 Miles, £ 150.12\n",
+      "140.0 Miles, £ 180.1\n",
+      "144.0 Miles, £ 205.42\n",
+      "70.0 Miles, £ 250.02\n",
+      "99.0 Miles, £ 398.72\n"
      ]
     }
    ],
@@ -89,21 +100,21 @@
     "            row = [float(item.strip()) for item in line.split(',')]\n",
     "            rows.append(row)\n",
     "\n",
-    "    for i in range(len(rows) - 1):\n",
-    "        smallestRowIndex = 0\n",
-    "        smallestPriceRow = rows[0]\n",
-    "        for index, row in enumerate(rows[i:]):\n",
-    "            if row[1] < smallestPriceRow[1]:\n",
-    "                smallestPriceRow = row\n",
-    "                smallestRowIndex = index + i\n",
-    "        del rows[smallestRowIndex]\n",
-    "        rows.insert(i, smallestPriceRow)\n",
+    "    for i, row in enumerate(rows):\n",
+    "        # get in index\n",
+    "        prices = [row[1] for row in rows[i:]]\n",
+    "        min_value = min(prices)\n",
+    "        min_index = prices.index(min_value) + i\n",
+    "        # swap with first element\n",
+    "        temp = rows[i]\n",
+    "        rows[i] = rows[min_index]\n",
+    "        rows[min_index] = temp\n",
     "\n",
     "    for row in rows:\n",
     "        print(f'{row[0]} Miles, £ {row[1]}')\n",
     "\n",
     "\n",
-    "selectionSortDistance()"
+    "selectionSortPrice()\n"
    ]
   }
  ],
