--- a/week5.ipynb
+++ b/week5.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Done"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -90,11 +98,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[9, 5], [3, 2], [8, 1], [6, 4], [11, 10], [13, 12]]\n",
+      "[[9, 5, 3, 2], [8, 6, 4, 1], [13, 12, 11, 10]]\n",
+      "[[9, 8, 6, 5, 4, 3, 2, 1], [13, 12, 11, 10]]\n",
+      "[[13, 12, 11, 10, 9, 8, 6, 5, 4, 3, 2, 1]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[13, 12, 11, 10, 9, 8, 6, 5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def reverse_merge_sort(original_list):\n",
+    "def mergeLists(listA: list, listB: list) -> list: \n",
+    "    sortedList = []\n",
+    "    indexA = 0\n",
+    "    indexB = 0\n",
+    "    # while not at the end of both lists\n",
+    "    while indexA < len(listA) and indexB < len(listB):\n",
+    "        # if a is more than b\n",
+    "        if listA[indexA] > listB[indexB]:\n",
+    "            sortedList.append(listA[indexA])\n",
+    "            indexA += 1\n",
+    "        # if b is more than a\n",
+    "        elif listB[indexB] > listA[indexA]:\n",
+    "            sortedList.append(listB[indexB])\n",
+    "            indexB += 1\n",
+    "    # if at end of list a \n",
+    "    if indexA == len(listA):\n",
+    "        sortedList += listB[indexB:]\n",
+    "    # if at end of list b \n",
+    "    elif indexB == len(listB):\n",
+    "        sortedList += listA[indexA:]\n",
+    "\n",
+    "    return sortedList\n",
+    "\n",
+    "# recursive merger\n",
+    "def mergeAllLists(mergeList):\n",
+    "    if len(mergeList) == 1:\n",
+    "        return mergeList[0]\n",
+    "    # holds all merged pairs\n",
+    "    merged = []\n",
+    "    numberOfPairs = round(len(mergeList) / 2)\n",
+    "    for i in range(numberOfPairs):\n",
+    "        pairA = mergeList[i*2]\n",
+    "        try:\n",
+    "          pairB = mergeList[i*2 + 1]\n",
+    "          # add merged pair to list\n",
+    "          merged.append(mergeLists(pairA, pairB))\n",
+    "        # if a has no pair ...\n",
+    "        except IndexError as e:\n",
+    "            # add to the end of the merged list\n",
+    "            merged.append(pairA)\n",
+    "          \n",
+    "    print(merged)\n",
+    "    return mergeAllLists(merged)\n",
+    "\n",
+    "\n",
+    "def mergeSort(alist):\n",
+    "    mergeList = [[x] for x in alist]\n",
+    "    merged = mergeAllLists(mergeList)\n",
+    "    return merged\n",
+    "    \n",
+    "mergeSort([5,9,3,2,8,1,4,6,10,11,12,13])\n",
     "    "
    ]
   }
