--- a/week9.ipynb
+++ b/week9.ipynb
@@ -1,27 +1,25 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Done"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "incorrect\n",
-      "incorrect\n",
-      "incorrect\n",
-      "incorrect\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "([17, 31, 41, 14, 18, 19], False)"
+       "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,38 +39,179 @@
     "    def __init__(self, root: TreeNode):\n",
     "        self.root = root\n",
     "\n",
-    "    def traverse(self, node: TreeNode, isBigger=True):\n",
-    "        res = []\n",
-    "        if not node == None:\n",
-    "            if not node.left == None:\n",
-    "                if node.item < node.left.item:\n",
-    "                    isBigger = False\n",
-    "                    print('incorrect')\n",
-    "            if not node.right == None:\n",
-    "                if node.item < node.right.item:\n",
-    "                    isBigger = False\n",
-    "                    print('incorrect')\n",
-    "            res.append(node.item)\n",
-    "            res = res + self.traverse(node.left, isBigger)[0]\n",
-    "            res = res + self.traverse(node.right, isBigger)[0]\n",
-    "        return (res, isBigger)\n",
+    "    @staticmethod\n",
+    "    def doesNodeDominate(node: TreeNode):\n",
+    "        if node == None:\n",
+    "            return True\n",
+    "        dominates = True\n",
+    "        # if left node exists ...\n",
+    "        if node.left != None:\n",
+    "            # if left node is less than node ... return false\n",
+    "            if node.item < node.left.item:\n",
+    "                dominates = False\n",
+    "        # if right node exists ...\n",
+    "        if node.right != None:\n",
+    "            # if right node is less than node ... return false\n",
+    "            if node.item < node.right.item:\n",
+    "                dominates = False\n",
+    "        return dominates\n",
+    "    \n",
     "\n",
+    "    def nodeDominates(self, node: TreeNode):\n",
+    "        # if node dose NOT exist return true ...\n",
+    "        if node == None:\n",
+    "            return True\n",
+    "        # if node dominates ...\n",
+    "        if self.doesNodeDominate(node):\n",
+    "            # returns true if left node and right node dominates\n",
+    "            return self.nodeDominates(node.left) and self.nodeDominates(node.right)\n",
+    "        else:\n",
+    "            # if node does NOT dominate return False\n",
+    "            return False\n",
+    "    \n",
+    "    def treeDominates(self):\n",
+    "        return self.nodeDominates(self.root)\n",
     "\n",
-    "a = TreeNode(17)\n",
-    "b = TreeNode(31)\n",
-    "c = TreeNode(18)\n",
-    "d = TreeNode(41)\n",
-    "e = TreeNode(14)\n",
-    "f = TreeNode(19)\n",
-    "\n",
+    "# level 1\n",
+    "a = TreeNode(10)\n",
     "tree = BinaryTree(a)\n",
+    "# level 2\n",
+    "b = TreeNode(11)\n",
+    "c = TreeNode(9)\n",
     "a.left = b\n",
     "a.right = c\n",
+    "# level 3\n",
+    "d = TreeNode(8)\n",
+    "f = TreeNode(8)\n",
     "b.left = d\n",
-    "d.right = e\n",
     "c.left = f\n",
+    "# level 4\n",
+    "e = TreeNode(7)\n",
+    "d.right = e\n",
     "\n",
-    "tree.traverse(tree.root)\n"
+    "tree.treeDominates()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "4\n",
+      "3\n",
+      "13\n",
+      "6\n",
+      "16\n",
+      "25\n",
+      "45\n",
+      "67\n",
+      "12 in tree? False\n",
+      "24 in tree? True\n",
+      "The minimum item is : 3\n",
+      "tree range from 10-50: [13, 16, 24, 25, 45]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class TreeNode():\n",
+    "    def __init__(self, item):\n",
+    "        self.item = item\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "\n",
+    "\n",
+    "class binarySearchTree():\n",
+    "    def __init__(self):\n",
+    "        self.root = None\n",
+    "\n",
+    "    def insert(self, item):\n",
+    "        if self.root is None:\n",
+    "            self.root = TreeNode(item)\n",
+    "        else:\n",
+    "            self._insert(item, self.root)\n",
+    "\n",
+    "    def _insert(self, item, currentNode):\n",
+    "        if item < currentNode.item:\n",
+    "            if currentNode.left is None:\n",
+    "                currentNode.left = TreeNode(item)\n",
+    "            else:\n",
+    "                self._insert(item, currentNode.left)\n",
+    "        elif item > currentNode.item:\n",
+    "            if currentNode.right is None:\n",
+    "                currentNode.right = TreeNode(item)\n",
+    "            else:\n",
+    "                self._insert(item, currentNode.right)\n",
+    "        else:\n",
+    "            print(\"Item is already existed in the tree\")\n",
+    "\n",
+    "  #  Task 2\n",
+    "    def search(self, value):\n",
+    "      return self._search(self.root, value)\n",
+    "\n",
+    "    def _search(self, current, value):\n",
+    "        if current == None:\n",
+    "            return False\n",
+    "        else:\n",
+    "            if current.item == value:\n",
+    "                return True\n",
+    "            if value < current.item:\n",
+    "                return self._search(current.left, value)\n",
+    "            else:\n",
+    "                return self._search(current.right, value)\n",
+    "            \n",
+    "  #  Task 3\n",
+    "    def find_minimum(self):\n",
+    "        minimum = self.root\n",
+    "        while minimum.left != None:\n",
+    "            minimum = minimum.left\n",
+    "        return minimum.item\n",
+    "\n",
+    "  #  Task 4\n",
+    "    def treeRange(self, min_value, max_value):\n",
+    "      return self._treeRange(self.root, min_value, max_value)\n",
+    "\n",
+    "    def _treeRange(self, current, min_value, max_value):\n",
+    "        res = []\n",
+    "        if current != None:\n",
+    "            res += self._treeRange(current.left, min_value, max_value)\n",
+    "            if min_value < current.item and current.item < max_value:\n",
+    "              res += [current.item]\n",
+    "            res += self._treeRange(current.right, min_value, max_value)\n",
+    "        return res\n",
+    "\n",
+    "    def print_preorder(self):\n",
+    "        self._print_preorder_aux(self.root)\n",
+    "\n",
+    "    def _print_preorder_aux(self, current):\n",
+    "        if current is not None:\n",
+    "            print(current.item)\n",
+    "            self._print_preorder_aux(current.left)\n",
+    "            self._print_preorder_aux(current.right)\n",
+    "\n",
+    "\n",
+    "bst = binarySearchTree()\n",
+    "bst.insert(24)\n",
+    "bst.insert(4)\n",
+    "bst.insert(3)\n",
+    "bst.insert(25)\n",
+    "bst.insert(13)\n",
+    "bst.insert(6)\n",
+    "bst.insert(45)\n",
+    "bst.insert(16)\n",
+    "bst.insert(67)\n",
+    "bst.print_preorder()\n",
+    "# task 2\n",
+    "print(f'12 in tree? {bst.search(12)}')\n",
+    "print(f'24 in tree? {bst.search(24)}')\n",
+    "# task 3\n",
+    "print(f\"The minimum item is : {bst.find_minimum()}\")\n",
+    "# task 4\n",
+    "print(f'tree range from 10-50: {bst.treeRange(10,50)}')\n"
    ]
   }
  ],
